reworked timeline structure: every day gets an own <ul/> now, to be able to group new created grains directly from the start;

--- a/sandglass/css/main.css
+++ b/sandglass/css/main.css
@@ -149,7 +149,7 @@ input:-ms-input-placeholder {
 }
 
 /* timeline */
-.timeline {
+.timeline__group-ul {
   list-style: none;
   padding: 0;
   margin: 0;
