--- a/sandglass/css/main.css
+++ b/sandglass/css/main.css
@@ -165,6 +165,10 @@ input:-ms-input-placeholder {
   border-left: 1px solid #ccc;
 }
 
+.timeline__item--track {
+  background-color: #F8E8C0;
+}
+
 .timeline__item--hidden {
   display: none;
 }
@@ -255,6 +259,10 @@ input:-ms-input-placeholder {
   line-height: 1.3;
   max-width: 20em;
   vertical-align: top;
+}
+
+.timeline__parsedStartEnd {
+  margin: 0 0 0 1.6em;
 }
 
 /* animation */
