minor styling enhancement, DRY out code for grouping

--- a/sandglass/css/main.css
+++ b/sandglass/css/main.css
@@ -292,6 +292,8 @@ input:-ms-input-placeholder {
   display: none;
   font-weight: 200;
   font-family: 'Open Sans', sans-serif;
+  max-width: 5.5em;
+  overflow: hidden;
 }
 
 .timeline__button {
