remove wrong activity wording, apply autocomplete also for tasks

--- a/sandglass/public/css/main.css
+++ b/sandglass/public/css/main.css
@@ -226,7 +226,7 @@ input:-ms-input-placeholder {
   margin-left: -4px;
 }
 
-.track__activity {
+.track__task {
   width: 6.7em;
   border-left: 0;
   border-right: 0;
