--- a/sandglass/public/css/main.css
+++ b/sandglass/public/css/main.css
@@ -300,28 +300,15 @@ input:-ms-input-placeholder {
   display: none;
 }
 
-.timeline__group {
-  position: absolute;
-  left: -3px;
+.timeline__groupHeader {
   font-size: .9em;
-  top: -1.9em;
-  display: none;
   overflow: hidden;
   color: #fff;
   background-color: #53B482;
-  width: 100.5%;
   padding: .3em 0 .3em 1.3em;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   border-left: 3px solid #53B482;
-}
-
-.timeline > .timeline__group-ul > .timeline__item:first-child {
-  margin: 1.65em 0 0 0;
-}
-
-.timeline > .timeline__group-ul > .timeline__item:first-child .timeline__group {
-  display: inherit;
 }
 
 .timeline__button {
@@ -347,11 +334,11 @@ input:-ms-input-placeholder {
   display: inherit;
 }
 
-.timeline__item-restart {
+.timeline__item-clone {
   right: 31px;
 }
 
-.timeline__item-restart:before {
+.timeline__item-clone:before {
   content: '\f079';
   font-family: FontAwesome;
   display: inline-block;
@@ -378,11 +365,21 @@ input:-ms-input-placeholder {
   display: inline-block;
 }
 
+.timeline__item-edit {
+  right: 67px;
+}
+
+.timeline__item-edit:before {
+  content: '\f040';
+  font-family: FontAwesome;
+  display: inline-block;
+}
+
 .timeline__item--track .timeline__item-end {
   display: inherit !important;
 }
 
-.timeline__item--track .timeline__item-restart,
+.timeline__item--track .timeline__item-clone,
 .timeline__item--track .timeline__item-delete {
   display: none !important;
 }
@@ -558,67 +555,6 @@ input:-ms-input-placeholder {
 /* nvd3 overwrites */
 svg text {
   fill: #949494;
-}
-
-/* notifications */
-.notification {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-
-  position: absolute;
-  top: 3px;
-  right: 0;
-
-  width: 8em;
-}
-
-.notification__text {
-  margin: 0;
-  font-size: .75em;
-}
-
-.notification__item {
-  padding: .5em;
-  border-left-width: 2px;
-  border-left-style: solid;
-
-  right: -8em;
-  position: relative;
-  overflow: hidden;
-
-  -webkit-animation: flyin .3s ease-in;
-  -webkit-animation-fill-mode: forwards;
-}
-
-@-webkit-keyframes flyin {
-  from {
-    visibility: hidden;
-  }
-
-  to {
-    right: 0;
-    visibility: visible;
-  }
-}
-
-.notification__item + .notification__item {
-  margin-top: 5px;
-}
-
-.notification__item--error {
-  border-color: #d9534f;
-  background-color: #fdf7f7;
-}
-
-.notification__item--warning {
-  border-color: #f0ad4e;
-  background-color: #fcf8f2;
-}
-
-.notification__item--success {
-  border-color: #3c763d;
-  background-color: #dff0d8;
 }
 
 /* login */
